Nytt åpent testendepunkt
